# marrow

./: .gitignore  .mcp.json  CLAUDE.md  CONTEXT.md  CONVENTIONS.md  CUSTOMIZE.md  DECISIONS.md  DESIGN.md  FUTURE.md  MAP.md  PLAN.md  PROGRESS.md  README.md  SCHEMA.md  handover.md  pyproject.toml
.playwright-mcp/: page-2026-06-14T04-30-48-750Z.yml  page-2026-06-14T04-31-05-125Z.yml  page-2026-06-14T04-31-20-085Z.yml
_scratch/: gate_v3_rerun.py
deploy/: cc-wrapper.sh  mw-aging.plist  mw-daily-catchup.plist  mw-daily-routine.plist  mw-dashboard-tick.plist  mw-db-backup.plist  mw-goose-bites.plist  mw-jsonl-cleanup.plist  mw-refresh.plist  mw-watcher.plist
eval-results/: baseline.json
marrow/: _atomic.py  aging.py  atlas.py  backup.py  candidates.py  cleanup.py  cli.py  config.default.toml  config.py  cortex_bridge.py  daemon.py  daily.py  daily_catchup.py  daily_prompts.py  dashboard.py  day_para.py  daybrief.py  diary.py  drift_sweep.py  entity_recall.py  goose_bites.py  handover_render.py  handover_template.md  hooks.py  inserter.py  install.py  llm.py  md_index.py  memes_dedup.py  mid_scan.py  migrate.py  monitor.py  outbox.py  paths.py  recall.py  reconcile.py  reconcile_inserter.py  repo.py  schedule.py  semantic_dedup.py  (+25 more)
scripts/: backfill_tl_range.py  bench_vec_knn.py  clean_harness_events.py  eval_recall.py  import_cyberboss.py  import_imprint.py  migrate_memes_types.py  migrate_tl_letters.py  purge_legacy_control_commands.py  repair_md_index.py  repair_vec_meta.py  sessionend-status.sh
tests/: conftest.py  test_a2r.py  test_aging.py  test_atlas.py  (+111 more)
(+88 files in other folders)
