[project]
name = "marrow"
version = "0.1.0"
description = "Personal AI memory + workflow system. SQLite-backed, model-agnostic, one dashboard."
requires-python = ">=3.12"
dependencies = [
    "sqlite-vec>=0.1.9",
    "mcp>=1.27",
    "watchdog>=6.0",
]

[project.scripts]
mw = "marrow.cli:main"

[tool.pytest.ini_options]
markers = ["manual: only when PYTEST_RUN_MANUAL=1"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["marrow*"]
