[project]
name = "marrow"
version = "0.1.0"
description = "Personal AI memory + workflow system. SQLite-backed, model-agnostic, one dashboard."
requires-python = ">=3.12"
dependencies = [
    "sqlite-vec>=0.1.9",
    "mcp>=1.27",
    "watchdog>=6.0",
    "numpy>=2.4.6",
    "fastembed>=0.8.0",
]

[project.scripts]
mw = "marrow.cli:main"

[tool.pytest.ini_options]
markers = ["manual: only when PYTEST_RUN_MANUAL=1"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.setuptools.packages.find]
include = ["marrow*"]

[tool.setuptools.package-data]
marrow = ["config.default.toml", "data/*.toml", "data/*.txt"]
